# libarchive-qt

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  ChangeLog  Global.hpp  LibArchive-Qt.pro  LibArchive.cpp  LibArchive.hpp  LibBZip2.hpp  LibGZip.hpp  LibLzma.hpp  Main.cpp  PKGBUILD  README.md  meson.build  meson_options.txt
archiver/: CMakeLists.txt  archiver  archiver.cpp  meson.build
debian/: README  changelog  control  copyright  files  libarchiveqt-bin.install  libarchiveqt-dev.install  libarchiveqt.install  libarchiveqt.substvars  rules
example/: CMakeLists.txt  Main.cpp  example.cpp  example.pro
lib/: CMakeLists.txt  ChangeLog  Global.hpp  LibArchive.cpp  LibArchive.hpp  LibBZip2.cpp  LibBZip2.hpp  LibGZip.cpp  LibGZip.hpp  LibLZip.cpp  LibLZop.hpp  LibLzma.cpp  LibLzma.hpp  LibLzma2.cpp  LibLzma2.hpp  README  common.pri  lib.pro  libarchiveqt.h  lz4dec.c  lz4dec.h  meson.build  shared.pro  static.pro
lib/MimeHandler/: NBMimeDatabase.cpp  NBMimeGlobPattern.cpp  NBMimeMagicRule.cpp  NBMimeMagicRuleMatcher.cpp  NBMimeProvider.cpp  NBMimeType.cpp  NBMimeTypeParser.cpp
lib/StandardPaths/: NBStandardPaths.cpp  NBStandardPaths_unix.cpp
lib/pkgconfig/: archiveqt.pc  archiveqt.pc.in  archiveqt5.pc  archiveqt5.pc.in  archiveqt6.pc  archiveqt6.pc.in
